Started property based testing